{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 945,
  "lineage": "cff766d2-66c6-4ade-7ce7-1a811fbee7db",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:targetgroup/tgObligatorioV1/39f014d22c7e7192",
            "arn_suffix": "targetgroup/tgObligatorioV1/39f014d22c7e7192",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:573243418801:targetgroup/tgObligatorioV1/39f014d22c7e7192",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tgObligatorioV1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-009bf918a2fec7708"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:internet-gateway/igw-0ad430559655b7127",
            "id": "igw-0ad430559655b7127",
            "owner_id": "573243418801",
            "tags": {
              "Name": "ig_obligatorio"
            },
            "tags_all": {
              "Name": "ig_obligatorio"
            },
            "vpc_id": "vpc-009bf918a2fec7708"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "obligatorio_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:loadbalancer/app/obligatorioLoadBalancer/308af9a519f83e47",
            "arn_suffix": "app/obligatorioLoadBalancer/308af9a519f83e47",
            "dns_name": "obligatorioLoadBalancer-1564454695.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:573243418801:loadbalancer/app/obligatorioLoadBalancer/308af9a519f83e47",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "obligatorioLoadBalancer",
            "security_groups": [
              "sg-05a08ceef399081ab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05ea799963dd71615"
              },
              {
                "subnet_id": "subnet-07cd9bf32ba2bde9e"
              }
            ],
            "subnets": [
              "subnet-05ea799963dd71615",
              "subnet-07cd9bf32ba2bde9e"
            ],
            "tags": {
              "Name": "obligatorio_load_balancer"
            },
            "tags_all": {
              "Name": "obligatorio_load_balancer"
            },
            "vpc_id": "vpc-009bf918a2fec7708",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-public-obligatorio",
            "aws_subnet.subnet_public1",
            "aws_subnet.subnet_public2",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "balanceador_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:listener/app/obligatorioLoadBalancer/308af9a519f83e47/47e156f813880d2c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:targetgroup/tgObligatorioV1/39f014d22c7e7192",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:573243418801:listener/app/obligatorioLoadBalancer/308af9a519f83e47/47e156f813880d2c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:loadbalancer/app/obligatorioLoadBalancer/308af9a519f83e47",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.tg_obligatorio",
            "aws_lb.obligatorio_load_balancer",
            "aws_security_group.sg-public-obligatorio",
            "aws_subnet.subnet_public1",
            "aws_subnet.subnet_public2",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:route-table/rtb-01ff25d2a1193aa39",
            "id": "rtb-01ff25d2a1193aa39",
            "owner_id": "573243418801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad430559655b7127",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_obligatorio"
            },
            "tags_all": {
              "Name": "rt_obligatorio"
            },
            "vpc_id": "vpc-009bf918a2fec7708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig_obligatorio",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c0fb0f3dcc5819a",
            "route_table_id": "rtb-01ff25d2a1193aa39",
            "subnet_id": "subnet-07cd9bf32ba2bde9e"
          },
          "dependencies": [
            "aws_internet_gateway.ig_obligatorio",
            "aws_route_table.rt_obligatorio",
            "aws_subnet.subnet_public1",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009124504c6144050",
            "route_table_id": "rtb-01ff25d2a1193aa39",
            "subnet_id": "subnet-05ea799963dd71615"
          },
          "dependencies": [
            "aws_internet_gateway.ig_obligatorio",
            "aws_route_table.rt_obligatorio",
            "aws_subnet.subnet_public2",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-internal-obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:security-group/sg-0859dba4d80c88a97",
            "description": "Permitir trafico http desde WebServers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All out",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0859dba4d80c88a97",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "DB Port from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_internal",
            "name_prefix": "",
            "owner_id": "573243418801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permitir_http"
            },
            "tags_all": {
              "Name": "permitir_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-009bf918a2fec7708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-public-obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:security-group/sg-05a08ceef399081ab",
            "description": "Permitir trafico ssh y http entrante a los WebServers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All out",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a08ceef399081ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_public_obl",
            "name_prefix": "",
            "owner_id": "573243418801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permitir_ssh_y_http_webservers"
            },
            "tags_all": {
              "Name": "permitir_ssh_y_http_webservers"
            },
            "timeouts": null,
            "vpc_id": "vpc-009bf918a2fec7708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_internal1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:subnet/subnet-07f2fdbb8a4482dde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-07f2fdbb8a4482dde",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573243418801",
            "tags": {
              "Name": "subnet_internal1"
            },
            "tags_all": {
              "Name": "subnet_internal1"
            },
            "vpc_id": "vpc-009bf918a2fec7708"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_internal2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:subnet/subnet-0266d26e3013c6ca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-0266d26e3013c6ca9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573243418801",
            "tags": {
              "Name": "subnet_internal2"
            },
            "tags_all": {
              "Name": "subnet_internal2"
            },
            "vpc_id": "vpc-009bf918a2fec7708"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:subnet/subnet-07cd9bf32ba2bde9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-07cd9bf32ba2bde9e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "573243418801",
            "tags": {
              "Name": "subnet_public1"
            },
            "tags_all": {
              "Name": "subnet_public1"
            },
            "vpc_id": "vpc-009bf918a2fec7708"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:subnet/subnet-05ea799963dd71615",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.20.0/24",
            "id": "subnet-05ea799963dd71615",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "573243418801",
            "tags": {
              "Name": "subnet_public2"
            },
            "tags_all": {
              "Name": "subnet_public2"
            },
            "vpc_id": "vpc-009bf918a2fec7708"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:vpc/vpc-009bf918a2fec7708",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-06e11fb90fc95f1ad",
            "default_route_table_id": "rtb-09f9c50518d524105",
            "default_security_group_id": "sg-02cc95a44a4e5971f",
            "dhcp_options_id": "dopt-fc3e6786",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-009bf918a2fec7708",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09f9c50518d524105",
            "owner_id": "573243418801",
            "tags": {
              "Name": "vpc_obligatorio"
            },
            "tags_all": {
              "Name": "vpc_obligatorio"
            }
          }
        }
      ]
    }
  ]
}